# chordmasta

./: .gitignore  filter.py  harmonics.py  note.py  test1.py  util.py
research/: harmonics.py  piano_notes.py  test1.py
src/: CMakeLists.txt  version.h
src/base/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp  sink.h  wav.cpp  wav.h
src/se/softcoded/chordmasta/: BlockData.java  CandidateSelection.java  CandidateSet.java  Complex.java  Decimator.java  FFT.java  FFTResult.java  HistoryBuffer.java  LowPassFilter.java  Main.java  MonoBlockData.java  Normalize.java  PianoNotes.java  ProcessUnit.java  QuickIndexSort.java  SineWaveGenerator.java  StereoBlockData.java  StereoToMono.java  TestTools.java
src/se/softcoded/chordmasta/csv/: ColumnHandler.java  ColumnHandlerFactory.java  CsvFile.java  FFTResultColumnHandler.java  MonoBlockDataColumnHandler.java
src/se/softcoded/chordmasta/ext/wav/: ReadExample.java  WavFile.java  WavFileException.java  WavFileGenerator.java  WriteExample.java
src/se/softcoded/chordmasta/signalprocessing/: Biquad.java  BiquadCoefficientFactory.java  Complex.java  Decimator.java  FFT.java  FFTResult.java  HannWindow.java  LowPassFilter.java  ProcessUnit.java  SampleRateExpander.java  SignalGenerator.java  StereoToMono.java  WhiteNoise.java
src/se/softcoded/chordmasta/test/: BiquadTest.java  FFTTest.java  TestTools.java  TimeMetrics.java
src/se/softcoded/chordmasta/util/: HistoryBuffer.java  NanoTime.java  QuickIndexSort.java  QuickIndexSortT.java  SineWaveGenerator.java
src/test/: CMakeLists.txt
